--- a/css/index.css
+++ b/css/index.css
@@ -374,18 +374,35 @@ body {
 
 /* About section styles */
 .about-section {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-image: url('../img/about/bg/background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     padding: 80px 20px;
+    padding-bottom: 0;
     border-top: 3px solid #ffff00;
     border-bottom: 3px solid #ffff00;
     position: relative;
     z-index: 1;
 }
 
+.about-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: -1;
+}
+
 .about-content {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
+    margin-bottom: -4px;
 }
 
 .about-content h2 {
@@ -397,12 +414,15 @@ body {
 }
 
 .about-content p {
+
     font-family: 'SundaySchool', Arial, sans-serif;
+    text-align: left;
     font-size: 1.2em;
     line-height: 1.8;
     color: #ffffff;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
     margin: 0;
+    margin-top: 20px;
 }
 
 /* Reviews section styles */
@@ -708,9 +728,6 @@ body {
         padding-top: 60px;
     }
 
-    .about-section {
-        padding: 60px 15px;
-    }
 
     .about-content h2 {
         font-size: 2em;
@@ -720,6 +737,12 @@ body {
     .about-content p {
         font-size: 1.1em;
         line-height: 1.6;
+    }
+
+    .about-img {
+        width: 290px;
+        margin-top: 5px;
+        z-index: -1;
     }
 
     .reviews-main-heading {
