Add photo gallery section to index.html; update navigation links and styles; introduce gallery.css for styling; implement modal functionality in gallery.js; add multiple images for the gallery.

--- a/css/index.css
+++ b/css/index.css
@@ -675,6 +675,10 @@ body {
     border: 2px solid #ffff00;
 }
 
+.about-img {
+    max-width: 290px;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     .desktop-nav {
@@ -744,6 +748,7 @@ body {
         margin-top: 5px;
         z-index: -1;
     }
+
 
     .reviews-main-heading {
         font-size: 2.2em;
