--- a/css/reviews.css
+++ b/css/reviews.css
@@ -88,13 +88,15 @@
 
 .review-girls {
     max-width: 100%;
+    width: 90%;
     bottom: 0px;
     transform: rotate(90deg);
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, width 0.5s ease;
 }
 
 .review-girls.spinning {
     transform: rotate(0deg);
+    width: 100%;
 }
 
 .review-rating {
